consistently use long values for stats
git-svn-id: https://svn.codehaus.org/mule/trunk@880 bf997673-6b11-0410-b953-e057580c5b09